# nsh

./: .env.example  .gitignore  Cargo.toml  README.md  document.txt  roadmap.md  run-locally.md
nsh/: Cargo.toml  Dockerfile  Makefile
nsh/src/: gemini.rs  vector_db.rs
src/: lib.rs  main.rs  main.rs.backup  web_search.rs
src/ai/: config.rs  mod.rs
src/modules/: commands.rs  completions.rs  config.rs  keybindings.rs  mod.rs  render.rs  state.rs
src/rag/: mod.rs
src/storage/: local.rs  mod.rs  vector.rs
src/tools/: mod.rs  terminal.rs  web_search.rs
