[package]
name = "nsh"
version = "0.1.0"
edition = "2024"

[lib]
name = "nsh"
path = "src/lib.rs"

[[bin]]
name = "nsh"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
arboard = "3"
aisdk = { version = "0.5", features = ["openaicompatible", "openai"] }
qdrant-client = "1.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
async-trait = "0.1"
thiserror = "2"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
regex = "1"