[package]
name = "nsh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
lancedb = "0.4"
arrow = "50.0"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0"
text-splitter = "0.10"
chrono = "=0.4.34"
colored = "3.1.1"
